# coronavirus_scrapy

./: .gitignore  LICENSE  main.py  manage.py  now.json  poetry_export.bat  poetry_export.sh  pyproject.toml  requirements.txt  requirements_dev.txt
