[tool.poetry]
name = "coronavirus_scrapy"
version = "0.1.0"
description = ""
authors = ["Mohamed <m.n.kaizen@gmail.com>", "Nabil Mohammed <nabil.alanssi19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.2"
fastapi = {extras = ["all"], version = "^0.52"}
loguru = "^0.4.1"
pendulum = "^2.1.0"
gunicorn = "^20.0.4"
typer = "^0.0.10"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
pytest = "^5.3.5"
coverage = "^5.0.3"
isort = "^4.3.21"
mypy = "^0.761"
radon = "^4.1.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
safety = "^1.8.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
