[tool.poetry]
name = "coronavirus_scrapy"
version = "0.3.0"
description = ""
authors = ["Mohamed <m.n.kaizen@gmail.com>", "Nabil Mohammed <nabil.alanssi19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
typer = "^0.0.10"
uvicorn = "^0.11.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
